      - Many of the enemies did not give rewards when killed
	  - The leaf disguise could not be crafted in the crafting hut
	  - Total protection from armor and other items is now shown in player stats interface
	  - Arguments got "stuck" after inputting incorrect arguments when equipping a weapon in the inventory
	  - The staff and the leafdisguise could be crafted despite already having them

Release v1.3.2
  - Modmakers:
    - Achievement rewards can now have requirements
    - The fists weapon is now not duplicated (which caused it to show multiple times in various places)
    - Added Vanilla Custom variable “priceAtWeaponSmith” to weapons
    - Added custom variable “canBeBoughtAtWeaponsmith” to weapons
  - Vanilla TextFighter:
    - Interfaces:
      - Only weapons that can be bought at the weaponsmith are shown in its interface
      - The vanilla textfighter shop now shows product prices
	- Visual:
	  - The guide file tree container now resizes automatically to fit all the files on the screen
	  - Text No longer wraps in the output and file viewer text areas
      - Compressed enemy stats (Takes up less lines)
	  - Fixed vanilla textfighter guide copying (the guide can now be correctly viewed in the gui)
	- Fixes:
	  - Fists shown twice in the weaponsmith (The fists may have been loaded twice)
      - Experience required to level up does not increase with level
      - Cannot equip fists
      - Rewards were not given with achievements
      - Crash Fix: Textfighter crashed when giving rewards to players that involved invoking methods

Release v1.3.1
  - The version is now shown in the title of the window of the gui version
  - Developers:
    - Wrote much needed Unit Tests
    - Added exceptions where they were needed (invalid arguments, etc.)
	- The game now will run in your development environment (no need to package it in order to run it)
  - Modmakers:
    - The TextFighter engine no longer forces the player to move back to the "menu" location.